comment route fix

--- a/config/config.env
+++ b/config/config.env
@@ -6,7 +6,7 @@ JWT_SECRET=jwt-my-secret-key
 JWT_EXPIRE=30d
 JWT_COOKIE_EXPIRE=30
 
-# JWT_REFRESH_SECRET=jwt-refresh-my-secret-key
+JWT_REFRESH_SECRET=jwt-refresh-my-secret-key
 
 FILE_UPLOAD_PATH= ./public/uploads
 UPLOADS_FOLDER= /uploads
